# localiser

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  debug.txt  finished.g2o  package.xml  small_cov.g2o  tmp.g2o
doc/: Doxyfile
doc/html/: annotated.html  annotated_dup.js  classGNSSObservation__coll__graph.md5  classGraphOptimiser.html  classGraphOptimiser__inherit__graph.md5  classICPObservation-members.html  classICPObservation__coll__graph.md5  classIcpMapMaker-members.html  classImuMeasurement-members.html  classLocalisationMethod-members.html  classes.html  (+109 more)
launch/: bag_output.launch  gps_filter.launch  localiser.launch  pub_output.launch
localiser/: CMakeLists.txt  package.xml
localiser_core/: CMakeLists.txt  package.xml
localiser_core/config/: rosconsole.config
localiser_core/doc/html/: classGNSSObservation-members.html  classGNSSObservation.html  classGNSSObservation__inherit__graph.md5  classGraphOptimiser-members.html  classGraphOptimiser__coll__graph.map  classICPObservation.html  classImuMeasurement.html  classImuMeasurement__inherit__graph.map  classLocalisationMethod__inherit__graph.map  classObserver-members.html  classPredictor-members.html  classSimple__graph.html  classSpeedMeasurement-members.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions_func.html  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_5.map  ros__localiser_8hpp_source.html
localiser_core/doc/html/search/: all_5.js  classes_0.js
localiser_core/doc/latex/: classGNSSObservation__coll__graph.md5  classGraphOptimiser__coll__graph.md5  classICPObservation.tex  classICPObservation__coll__graph.md5  classICPObservation__inherit__graph.md5  classImuMeasurement.tex  classPredictor.tex  classSpeedMeasurement__coll__graph.md5  classSpeedMeasurement__inherit__graph.md5  hierarchy.tex  structSimple__node.tex
localiser_core/include/localiser_core/: bag_destination.h  bag_destination.hpp  bag_output.hpp  bag_source.h  bag_source.hpp  destination_interface.h  graph_optimiser.hpp  icp_matcher_pipeline.hpp  linear_filter.h  linear_filter.hpp  localisation_method.h  localisation_method.hpp  localiser_input.hpp  localiser_output.hpp  motion_model.cpp  motion_model.h  observation_model.h  observation_model.hpp  observer.hpp  publisher.h  publisher.hpp  ros_localiser.hpp  source_interface.h
localiser_core/launch/: subscriber.launch
localiser_core/src/: bag_destination.cpp  bag_output.cpp  bag_source.cpp  destination_interface.cpp  graph_optimiser.cpp  linear_filter.cpp  localisation_method.cpp  localiser_input.cpp  localiser_output.cpp  motion_model.cpp  observation_model.cpp  observer.cpp  publisher.cpp  ros_localiser.cpp  source_interface.cpp
src/: bag_input.cpp  bitmap_output.cpp  gps_filter.cpp  graph_optimiser.cpp  gtsam_optimiser.cpp  icp_matcher_pipeline.cpp  linear_filter.cpp  localisation_method.cpp  localiser.cpp  localiser_input.cpp  localiser_output.cpp  observer.cpp  point_cloud_features_pipeline.cpp  predictor.cpp  publisher.cpp  ros_localiser.cpp  run_pipeline.cpp
srv/: instruct_localiser.srv  reset_localiser.srv
(+547 files in other folders)
