<package format="2">
  <name>localiser</name>
  <version>0.0.1</version>
  <description>A c++ version of the position filter with options for a filtering approach, or a graph optimisation approach to localisation in ROS</description>
  <maintainer email="stewart.worrall@sydney.edu.au">Stewart Worrall</maintainer>

  <license>BSD</license>

  <url>http://sydney.edu.au/acfr/its</url>

  <author>Stewart Worrall</author>
  <author>Siqi Yi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>mrpt_bridge</depend>
  <depend>gps_common</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>libsuitesparse-dev</depend>  <!-- required for graph optimisation -->
 <!-- 
  <build_depend>visualization_msgs</build_depend>
  <build_depend>mrpt_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>mrpt_rawlog</build_depend>
  <build_depend>mrpt</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpqxx</build_depend>
  <build_depend>libpqxx-dev</build_depend>

  <run_depend>libpqxx</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>mrpt_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>mrpt_rawlog</run_depend>
  <run_depend>mrpt</run_depend> 

  <build_depend>point_cloud_features</build_depend>
  <run_depend>point_cloud_features</run_depend>
  <build_depend>tf2</build_depend>
  <run_depend>tf2</run_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  -->
</package>
