<package format="2">
  <name>localiser_core</name>
  <version>0.0.1</version>
  <description>A c++ version of the position filter with options for a filtering approach, or a graph optimisation approach to localisation in ROS</description>
  <maintainer email="stewart.worrall@sydney.edu.au">Stewart Worrall</maintainer>

  <license>BSD</license>

  <url>http://sydney.edu.au/acfr/its</url>

  <author>Stewart Worrall</author>
  <author>Siqi Yi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>tf2_msgs</depend>
  <depend>mrpt_bridge</depend>
  <depend>gps_common</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dataset_tools</depend>
  <depend>nav_msgs</depend>
  <depend>libsuitesparse</depend>  <!-- required for graph optimisation -->

</package>
